# ACES.Metrics-Handler

./: README.md  pyproject.toml
config/docker/nats/: README.md  docker-compose.yaml  producer.py  subscriber.py
config/k8s/aces/aces-notebook/: README.md  deployment.yaml  pv.yaml
config/k8s/aces/metrics_catalogue/: deployment.yaml
config/k8s/aces/metrics_consumer/: deployment.yaml
config/k8s/jupyter/: jupyter.yaml  pv.yaml
config/k8s/jupyter/pv/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
config/k8s/jupyter/pv/graph_base/: base_client.py  demand.py
config/k8s/jupyter/pv/graph_base/.ipynb_checkpoints/: demand-checkpoint.py
config/k8s/jupyter/pv/timescaledb/.ipynb_checkpoints/: client-checkpoint.py
metrics_catalogue/: Dockerfile  README.md  pyproject.toml
metrics_catalogue/src/: api.py  settings.py
metrics_consumer/: Dockerfile  README.md  consume.py  pyproject.toml
metrics_consumer/src/Kafka/: client.py
retentionETLs/: manage_metrics_flow-deployment.yaml
retentionETLs/flows/: manage_metrics_flow.py  settings.py
retentionETLs/prefect/: block.py  workpool.py
retentionETLs/prefect/.ipynb_checkpoints/: block-checkpoint.py
storage/graph_base/: demand.py
storage/timescaledb/: client.py  init_table.py
